# trading-bot-mt5

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: epic.yml  story.yml
.github/workflows/: ci-code-check.yaml
config/: config.example.yaml
docs/: HLD.md  ProjectStructure.md  Workplan.md  docs_HLD_Version1.md
scripts/: run_bot.py
src/: __init__.py
src/alert_service/: telegram.py
src/common/: config.py  types.py
src/journal_service/: csv_journal.py
src/metatrader_client/: MetaTraderClient.md  client.py
src/risk_manager/: risk_manager.py
src/strategy/: strategy.py
src/trade_engine/: engine.py
tests/: conftest.py  test_client.py  test_engine_integration.py  test_risk_manager.py  test_strategy.py
